[package]
name = "passmanager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.7"
rand = "0.8.4"
# clap = {version = "4.3.19", features = ["derive"]}
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.70"
zeroize = "1.3.0"
aes-gcm = {version = "0.10.2"}
pipeline = "0.5.0"
ctrlc = "3.2.3"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1